fixing alignment errors of the items in the detail of the books and add buttons.

--- a/src/components/presentation/utils/Book.css
+++ b/src/components/presentation/utils/Book.css
@@ -1,12 +1,17 @@
 
 .book {
     width: 140px;
+    display: flex;
+    flex-direction: column;
   }
 
 .book-top {
-    position: relative;
-    height: 200px;
-    display: flex;
+  display: flex;
+  align-items: center;
+}
+
+.cover img{
+  height: 200px;
 }
 
 .book-title,
